--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 * {
     margin: 0;
@@ -8,12 +8,88 @@
 
 body {
     height: 100vh;
-    font-family: 'Poppins';
+    font-family: 'Poppins', sans-serif;
     background-color: #fafafa;
 }
 
-img {
-    height: 200px;
+section {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    padding: 1rem;
+}
+
+form {
+    display: flex;
+    flex-direction: row;
+    background-color: white;
+    padding: 1rem;
+    border-radius: 15px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    width: 75%;
+    align-items: center;
+    justify-content: space-between;
+    gap: 1rem;
+}
+
+/* Image = 40% */
+.img {
+    width: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.img img {
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+}
+
+/* Contenu principal = 60% (Texte + Infos) */
+main {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-between;
+    gap: 2rem;
+}
+
+/* Texte = 40% */
+.titre-desc {
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.titre-desc a {
+    font-size: 1.2rem;
+    word-wrap: break-word;
+    text-decoration: none;
+    font-size: 0.8rem;
+    color: black;
+    transition: 0.3s;
+}
+
+.titre-desc a:hover {
+    text-decoration: underline;
+}
+
+.description {
+    color: #4e4e4e;
+    margin-bottom: 1rem;
+    font-size: 0.9rem;
+    word-wrap: break-word;
+}
+
+/* Infos = 20% */
+.infos {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: space-around;
 }
 
 .stock-true {
@@ -24,25 +100,13 @@ img {
     color: red;
 }
 
-section {
+.qte {
     display: flex;
-    flex-wrap: wrap;
-    gap: 2rem;
-    padding: 1rem;
-}
-
-form {
-    display: inline-flex;
-    flex-direction: column;
+    flex-direction: row;
     gap: 1rem;
-    background-color: white;
-    padding: 1rem;
-    border-radius: 15px;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
-form input {
-    width: 15%;
+input[type="number"] {
     text-align: center;
 }
 
