Implement article detail page with secure SQL query and stock status display

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,3 +120,8 @@ form input[type="submit"] {
     cursor: pointer;
     margin-top: 1rem;
 }
+
+.article {
+    height: 100%;
+    width: 100%;
+}
