--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,12 +92,25 @@ main {
     justify-content: space-around;
 }
 
+.base {
+    text-decoration: line-through;
+    color: rgba(94, 94, 94, 0.832);
+}
+
+.prix {
+    font-size: 2em;
+    font-weight: bold;
+    color: red;
+}
+
 .stock-true {
-    color: green;
+    color: rgba(0, 176, 0, 0.87);
+    font-weight: 600;
 }
 
 .stock-false {
     color: red;
+    font-weight: 600;
 }
 
 .qte {
@@ -122,6 +135,20 @@ form input[type="submit"] {
 }
 
 .article {
-    height: 100%;
+    height: 120vh;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.article .img img {
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+}
+
+.article main {
+    display: flex;
+    flex-direction: column;
+    gap: 0.7rem;
 }
