--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@ form {
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     width: 75%;
     align-items: center;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     gap: 1rem;
 }
 
@@ -40,10 +40,17 @@ form {
     justify-content: center;
 }
 
+.img2 {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .img img {
     width: 100%;
-    height: auto;
-    object-fit: contain;
+    height: 100%;
+    object-fit: cover;
 }
 
 /* Contenu principal = 60% (Texte + Infos) */
@@ -135,7 +142,7 @@ form input[type="submit"] {
 }
 
 .article {
-    height: 120vh;
+    /* height: 120vh; */
     width: 100%;
     display: flex;
     flex-direction: column;
