--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,6 +139,11 @@ form input[type="submit"] {
     border-radius: 5px;
     cursor: pointer;
     margin-top: 1rem;
+    transition: 0.3s;
+}
+
+form input[type="submit"]:hover {
+    background-color: #0056b3;
 }
 
 .article {
