--- a/public/style.css
+++ b/public/style.css
@@ -12,11 +12,53 @@ body {
     background-color: #fafafa;
 }
 
+nav {
+    background-color: #0056b3;
+    padding: 1rem 2rem;
+}
+
+ul {
+    display: flex;
+    gap: 2rem;
+}
+
+li {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.logo {
+    height: 3rem;
+    font-weight: 700;
+}
+
+main {
+    padding: 1rem;
+}
+
 section {
     display: flex;
+    flex-direction: row;
+    /* gap: 2rem; */
+    /* padding: 1rem; */
+}
+
+.articles-container {
+    display: block;
     flex-direction: column;
     gap: 2rem;
-    padding: 1rem;
+    /* width: 75%; */
+    height: 100%;
 }
 
 form {
@@ -26,10 +68,33 @@ form {
     padding: 1rem;
     border-radius: 15px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    width: 75%;
+    width: 100%;
     align-items: center;
     /* justify-content: space-between; */
     gap: 1rem;
+    margin: 2rem 0;
+}
+
+.auth-container {
+    display: flex;
+    flex-direction: column;
+    width: 25%;
+    gap: 2rem;
+    margin-top: 2rem;
+    background-color: white;
+    padding: 1rem;
+    border-radius: 15px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.auth-form {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    background: none;
+    box-shadow: none;
+    align-items: start;
+    justify-content: start;
 }
 
 /* Image = 40% */
@@ -163,4 +228,11 @@ form input[type="submit"]:hover {
     display: flex;
     flex-direction: column;
     gap: 0.7rem;
+}
+
+footer {
+    background-color: #0056b3;
+    color: white;
+    padding: 1rem 2rem;
+    text-align: center;
 }
