--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,11 +9,14 @@
 body {
     height: 100vh;
     font-family: 'Poppins', sans-serif;
-    background-color: #fafafa;
+    /* background-color: #fafafa; */
+    background-color: #005abb1c;
 }
 
+/* NAVBAR */
+
 nav {
-    background-color: #005abb;
+    background-color: #005abbe8;
     padding: 2rem;
 }
 
@@ -31,24 +34,33 @@ li {
     list-style: none;
 }
 
+/* HOMEPAGE */
+
 section {
     display: flex;
     flex-direction: column;
     gap: 2rem;
     padding: 1rem;
+    align-items: center;
+    justify-content: center;
 }
 
 form {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     background-color: white;
     padding: 1rem;
     border-radius: 15px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    width: 75%;
+    width: 85%;
     align-items: center;
     /* justify-content: space-between; */
     gap: 1rem;
+}
+
+form main {
+    display: flex;
+    flex-direction: column;
 }
 
 /* Image = 40% */
@@ -67,9 +79,14 @@ form {
 }
 
 .img img {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 10rem;
     object-fit: cover;
+}
+
+.img-article {
+    height: 70%;
+    width: 70%;
 }
 
 /* Contenu principal = 60% (Texte + Infos) */
@@ -111,7 +128,7 @@ main {
 
 /* Infos = 20% */
 .infos {
-    width: 30%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -177,4 +194,63 @@ form input[type="submit"] {
     display: flex;
     flex-direction: column;
     gap: 0.7rem;
+}
+
+/* AUTH */
+
+.form-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100dvh;
+}
+
+.auth-form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: start;
+    padding: 2rem;
+    width: 90%;
+}
+
+.auth-form input {
+    padding: 0.5rem;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    width: 100%;
+}
+
+
+@media screen and (min-width: 768px) {
+    section {
+        align-items: start;
+    }
+
+    form {
+        width: 80%;
+        display: flex;
+        flex-direction: row;
+    }
+
+    form main {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .img img {
+        height: 100%;
+        width: 100%;
+    }
+
+    .infos {
+        width: 30%;
+    }
+
+    .auth-form {
+        width: 40%;
+    }
+    
 }
