Refactor navigation links and update form actions; remove unused index.php file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -203,7 +203,7 @@ form input[type="submit"] {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100dvh;
+    height: 90%;
 }
 
 .auth-form {
