--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,8 +202,7 @@ form input[type="submit"] {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    height: 90%;
+    padding: 4rem 0;
 }
 
 .auth-form {
