--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -221,6 +221,42 @@ form input[type="submit"] {
     width: 100%;
 }
 
+/* NEW ARTICLE */
+
+.article-form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: start;
+    padding: 2rem;
+    width: 90%;
+}
+
+.article-form input {
+    padding: 0.5rem;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    width: 100%;
+}
+
+.article-form textarea {
+    padding: 0.5rem;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    width: 100%;
+    height: 10rem;
+}
+
+.article-form input[type="number"] {
+    text-align: start;
+}
+
+.not-clickable {
+    pointer-events: none;
+    background-color: #f0f0f0;
+    opacity: 0.7;
+}
+
 
 @media screen and (min-width: 768px) {
     section {
@@ -258,7 +294,7 @@ form input[type="submit"] {
         width: 30%;
     }
 
-    .auth-form {
+    .auth-form, .article-form {
         width: 40%;
     }
     
