--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,6 +57,7 @@ li {
     background-color: #2b74c1;
     border-radius: 15px;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    min-width: 10%;
 }
 
 .dropdown-container:hover {
@@ -403,9 +404,9 @@ form input[type="submit"] {
     }
 
     .img-article {
-        height: 30%;
-        width: 30%;
-        margin-bottom: 2rem;
+        height: 20%;
+        width: 20%;
+        margin-bottom: 4rem;
     }
 
     .infos {
